@@ -36,6 +36,7 @@ Release 0.19.0 - Unreleased
                With J-D's one line patch, test cases now appear to work and
                PerformanceEvaluation works as before.
    HBASE-939   NPE in HStoreKey
+   HBASE-945   Be consistent in use of qualified/unqualified mapfile paths
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
